# vecadd

./: Findvecadd.cmake  README.md  vecaddConfig.cmake
benchmark/: CMakeLists.txt
benchmark/src/: main.c
cmake/: common.cmake
include/vecadd/: vecadd.h
include/vecadd/common/: Alloc.h  Array.h  Config.h  Time.h  Vec.h
include/vecadd/par/: Alpaka.h  Alpaka.hpp  Cuda.h  Omp.h
include/vecadd/seq/: Basic.h
src/common/: Alloc.c  Array.c  Time.c  Vec.c
src/par/: Alpaka.cpp  Alpaka.cu  Cuda.cu  Omp.c
src/seq/: Basic.c
